--- a/pom.xml
+++ b/pom.xml
@@ -118,11 +118,17 @@
             <version>${playwright.version}</version>
             <scope>test</scope>
         </dependency>
-       <!-- <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.33</version>
-        </dependency> -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.9.0</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- <dependency>
+             <groupId>mysql</groupId>
+             <artifactId>mysql-connector-java</artifactId>
+             <version>8.0.33</version>
+         </dependency> -->
 
         <!-- compile only, deployed container will provide this -->
         <!--
