--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,11 @@
             <scope>provided</scope>
         </dependency>
         -->
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>dotenv-java</artifactId>
+            <version>2.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
