--- a/pom.xml
+++ b/pom.xml
@@ -155,7 +155,17 @@
             <artifactId>jackson-core</artifactId>
             <version>2.15.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.9</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.9</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
